force-app/main/default/objects/Job_Application__c/fields/Adhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Number__c</fullName>
    <label>Adhar Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>