force-app/main/default/objects/Job_Application__c/fields/Btech_College_Name__c.field-meta.xml
<CustomField>
    <fullName>Btech_College_Name__c</fullName>
    <label>Btech College Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>