force-app/main/default/objects/Job_Application__c/fields/Btech_Percent__c.field-meta.xml
<CustomField>
    <fullName>Btech_Percent__c</fullName>
    <label>Btech Percent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>