force-app/main/default/objects/Job_Application__c/fields/Current_Package__c.field-meta.xml
<CustomField>
    <fullName>Current_Package__c</fullName>
    <label>Current Package</label>
    <length>50</length>
    <type>Text</type>
</CustomField>