force-app/main/default/objects/Job_Application__c/fields/Degree_Btech__c.field-meta.xml
<CustomField>
    <fullName>Degree_Btech__c</fullName>
    <label>Btech Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EEE</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>MECH</fullName>
            </value>
            <value>
                <fullName>CIVIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>