force-app/main/default/objects/Job_Application__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <inlineHelpText>example@gmail.com</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>