force-app/main/default/objects/Job_Application__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <inlineHelpText>Experience In Months</inlineHelpText>
    <label>Experience</label>
    <length>50</length>
    <type>Text</type>
</CustomField>