force-app/main/default/objects/Job_Application__c/fields/Inter_Diploma_College_Name__c.field-meta.xml
<CustomField>
    <fullName>Inter_Diploma_College_Name__c</fullName>
    <label>Inter/Diploma College Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>