force-app/main/default/objects/Job_Application__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Expected Package</label>
    <length>50</length>
    <type>Text</type>
</CustomField>