force-app/main/default/objects/Job_Application__c/fields/Percent_In_Inter_Diploma__c.field-meta.xml
<CustomField>
    <fullName>Percent_In_Inter_Diploma__c</fullName>
    <label>Percent In Inter/Diploma</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>