force-app/main/default/objects/Job_Application__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <inlineHelpText>Skills on you have worked</inlineHelpText>
    <label>Skills</label>
    <type>TextArea</type>
</CustomField>