force-app/main/default/objects/Job_Application__c/fields/SSC_School_Name__c.field-meta.xml
<CustomField>
    <fullName>SSC_School_Name__c</fullName>
    <label>SSC School Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>